@@ -127,10 +127,11 @@ class Policy:
                     info = actor_learner_queue.get()
                     last_obs, pre_action, obs, reward, done, add = info
 
-                    last_obs, obs = projector.batch_project([last_obs, obs], proj_index_init_obs is None)
+                    last_obs, obs = projector.batch_project([last_obs, obs])
 
                     if proj_index_init_obs is None:
-                        proj_index_init_obs = last_obs
+                        # drop last_obs of the first interaction
+                        proj_index_init_obs = obs
 
                     if add:  # does not add traj from head actor, and first transition from other actors
                         trajectory.append([last_obs, pre_action, obs, reward])
